# desqueezer

./: meson.build
src/: Application.vala
vapi/: libavcodec.vapi  libavformat.vapi  libavutil.vapi
